--- a/package.json
+++ b/package.json
@@ -3,23 +3,33 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@octokit/graphql": "^4.3.1",
+    "@octokit/rest": "^16.34.1",
+    "@primer/octicons-react": "^9.3.1",
+    "@reduxjs/toolkit": "^1.0.4",
     "@types/jest": "24.0.21",
     "@types/node": "12.12.0",
-    "@types/react": "16.9.11",
     "@types/react-dom": "16.9.3",
     "react": "^16.11.0",
     "react-dom": "^16.11.0",
+    "react-loadable": "^5.5.0",
+    "react-redux": "^7.1.3",
+    "react-router-dom": "^5.1.2",
     "react-scripts": "3.2.0",
+    "styled-components": "^4.4.1",
     "typescript": "3.6.4"
+  },
+  "eslintConfig": {
+    "extends": [
+      "react-app",
+      "plugin:prettier/recommended"
+    ]
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
-  },
-  "eslintConfig": {
-    "extends": "react-app"
   },
   "browserslist": {
     "production": [
@@ -32,5 +42,22 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@loadable/component": "^5.10.3",
+    "@types/loadable__component": "^5.10.0",
+    "@types/react": "^16.9.11",
+    "@types/react-redux": "^7.1.5",
+    "@types/react-router-dom": "^5.1.2",
+    "@types/styled-components": "^4.1.20",
+    "dotenv": "^8.2.0",
+    "eslint": "^6.6.0",
+    "eslint-config-prettier": "^6.5.0",
+    "eslint-plugin-prettier": "^3.1.1",
+    "eslint-plugin-react": "^7.16.0",
+    "i": "^0.3.6",
+    "moment": "^2.24.0",
+    "npm": "^6.12.1",
+    "prettier": "^1.18.2"
   }
 }
