--- a/package.json
+++ b/package.json
@@ -7,16 +7,25 @@
     "@octokit/rest": "^16.34.1",
     "@primer/octicons-react": "^9.3.1",
     "@reduxjs/toolkit": "^1.0.4",
+    "@types/enzyme": "^3.10.4",
+    "@types/enzyme-adapter-react-16": "^1.0.5",
     "@types/jest": "24.0.21",
     "@types/node": "12.12.0",
     "@types/react-dom": "16.9.3",
+    "deep-equal": "^2.0.1",
+    "enzyme": "^3.11.0",
+    "enzyme-adapter-react-16": "^1.15.2",
     "react": "^16.11.0",
     "react-dom": "^16.11.0",
     "react-loadable": "^5.5.0",
     "react-redux": "^7.1.3",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.2.0",
-    "styled-components": "^4.4.1",
+    "react-test-renderer": "^16.12.0",
+    "redux-logger": "^3.0.6",
+    "redux-saga": "^1.1.3",
+    "reselect": "^4.0.0",
+    "styled-components": "^5.0.0",
     "typescript": "3.6.4"
   },
   "eslintConfig": {
@@ -29,7 +38,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "storybook": "start-storybook -p 9009 -s public",
+    "build-storybook": "build-storybook -s public"
   },
   "browserslist": {
     "production": [
@@ -45,11 +56,21 @@
   },
   "devDependencies": {
     "@loadable/component": "^5.10.3",
+    "@octokit/types": "^2.1.1",
+    "@redux-saga/types": "^1.1.0",
+    "@storybook/addon-actions": "^5.3.12",
+    "@storybook/addon-links": "^5.3.12",
+    "@storybook/addons": "^5.3.12",
+    "@storybook/cli": "^5.3.12",
+    "@storybook/preset-create-react-app": "^1.5.2",
+    "@storybook/react": "^5.3.12",
+    "@types/deep-equal": "^1.0.1",
     "@types/loadable__component": "^5.10.0",
     "@types/react": "^16.9.11",
     "@types/react-redux": "^7.1.5",
     "@types/react-router-dom": "^5.1.2",
     "@types/styled-components": "^4.1.20",
+    "@types/webpack-env": "^1.15.1",
     "dotenv": "^8.2.0",
     "eslint": "^6.6.0",
     "eslint-config-prettier": "^6.5.0",
