--- a/package.json
+++ b/package.json
@@ -15,6 +15,9 @@
     "deep-equal": "^2.0.1",
     "enzyme": "^3.11.0",
     "enzyme-adapter-react-16": "^1.15.2",
+    "graphql": "^14.6.0",
+    "graphql-normalizr": "^2.10.1",
+    "normalizr": "^3.5.0",
     "react": "^16.11.0",
     "react-dom": "^16.11.0",
     "react-loadable": "^5.5.0",
@@ -24,6 +27,8 @@
     "react-test-renderer": "^16.12.0",
     "redux-logger": "^3.0.6",
     "redux-saga": "^1.1.3",
+    "redux-subscriber": "^1.1.0",
+    "redux-watch": "^1.1.1",
     "reselect": "^4.0.0",
     "styled-components": "^5.0.0",
     "typescript": "3.6.4"
