--- a/package.json
+++ b/package.json
@@ -4,34 +4,22 @@
   "private": true,
   "dependencies": {
     "@octokit/graphql": "^4.3.1",
-    "@octokit/rest": "^16.34.1",
+    "@octokit/rest": "^16.43.1",
     "@primer/octicons-react": "^9.3.1",
     "@reduxjs/toolkit": "^1.0.4",
     "@types/enzyme": "^3.10.4",
     "@types/enzyme-adapter-react-16": "^1.0.5",
-    "@types/jest": "24.0.21",
-    "@types/node": "12.12.0",
-    "@types/react-dom": "16.9.3",
     "deep-equal": "^2.0.1",
     "enzyme": "^3.11.0",
     "enzyme-adapter-react-16": "^1.15.2",
-    "graphql": "^14.6.0",
-    "graphql-normalizr": "^2.10.1",
-    "normalizr": "^3.5.0",
     "react": "^16.11.0",
     "react-dom": "^16.11.0",
-    "react-loadable": "^5.5.0",
     "react-redux": "^7.1.3",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.2.0",
-    "react-test-renderer": "^16.12.0",
-    "redux-logger": "^3.0.6",
-    "redux-saga": "^1.1.3",
     "redux-subscriber": "^1.1.0",
     "redux-watch": "^1.1.1",
-    "reselect": "^4.0.0",
-    "styled-components": "^5.0.0",
-    "typescript": "3.6.4"
+    "styled-components": "^5.0.0"
   },
   "eslintConfig": {
     "extends": [
@@ -60,6 +48,10 @@
     ]
   },
   "devDependencies": {
+    "typescript": "3.6.4",
+    "graphql": "^14.6.0",
+    "@types/jest": "24.0.21",
+    "@types/node": "12.12.0",
     "@loadable/component": "^5.10.3",
     "@octokit/types": "^2.1.1",
     "@redux-saga/types": "^1.1.0",
@@ -71,7 +63,7 @@
     "@storybook/react": "^5.3.12",
     "@types/deep-equal": "^1.0.1",
     "@types/loadable__component": "^5.10.0",
-    "@types/react": "^16.9.11",
+    "@types/react": "^16.9.20",
     "@types/react-redux": "^7.1.5",
     "@types/react-router-dom": "^5.1.2",
     "@types/styled-components": "^4.1.20",
